# sensor-network

./: .gitignore  LICENSE  README.md
device/eeprom/: generate.py
device/lib/: buffer.h  device.cpp  device.h
hub/: xiaxrhub.service
hub/backend/: __main__.py  config.py  data.py  device.py  gateway.json  gateway.py  mesh.py  messages.py  network.py  scan.py  settings.json
hub/modules/: pyrf24netx.cpp  setup.py
hub/src/: config.cpp  config.h  decode.h  device.cpp  device.h  gateway.cpp  gateway.h  hexify.h  hub.h  main.cpp  measurement.cpp  measurement.h  meson.build  network.h
hub/src/RF24NetworkX/: RF24Network.cpp  RF24Network.h  RF24Network_config.h  Readme.md
hub/src/RF24X/: RF24.cpp  RF24.h  RF24_config.h  Readme.md  nRF24L01.h
hub/src/RF24X/rpi/: RF24_arch_config.h  bcm2835.cpp  bcm2835.h  bcm2835_auxspi.cpp  bcm2835_auxspi.h  bcm2835_defs.h  bcm2835_i2c.cpp  bcm2835_i2c.h  bcm2835_st.h  compatibility.h  gpio.h  interrupt.cpp  interrupt.h  spi.cpp  spi.h
hub/src/output/: log_file.h  output_handler.h
hub/src/rpi/: RF24_arch_config.h  bcm2835.cpp  bcm2835.h  gpio.h  includes.h  spi.cpp
hub/src/utility/: delay.cpp  format_date.h  hexify.h  memmap.h  sync_queue.h
hub/supervisor/: go.mod
hub/supervisor/cmd/: main.go
hub/supervisor/pkg/messages/: measurement.pb.go
hub/supervisor/pkg/systemd/: systemd.go
hub/sys/: install_docker.sh  setup_grafana.sh  setup_timescale.sh
